# langgraph-agent-stack

./: .checkov.prod.yaml  .checkov.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  security.yml
agents/: __init__.py  analyst.py  base_agent.py  llm_retry.py  models.py  researcher.py
api/: app.py  dependencies.py  lifespan.py  main.py  middleware.py  models.py  router_factory.py  state.py
api/endpoints/: health.py  packs.py  pipeline.py  reviews.py  sessions.py
connectors/: README.md  __init__.py  base.py  gdrive_connector.py  http_connector.py  oauth.py  rag_connector.py  resolver.py  sharepoint_connector.py
control_plane/: README.md  __init__.py  enforce.py  policies.py  registry.py
core/: config.py  connectors.py  cost.py  graph.py  llm.py  memory.py  observability.py  review_store.py  security.py
docs/: architecture.md  security.md  架构分析.md  项目问答笔记.md
docs/superpowers/specs/: 2026-04-21-platform-kernel-design.md
domain_packs/: README.md  __init__.py
domain_packs/analysis_only/: pack.py
domain_packs/common/: compliance.py  output_guard.py  prompt_safety.py  structured_llm.py
domain_packs/contract_reviewer/: pack.py  schemas.py
domain_packs/executive_brief/: pack.py
domain_packs/finance/: __init__.py
domain_packs/finance/financial_memo/: COMPLIANCE.md  __init__.py  pack.py  schemas.py
domain_packs/financial_memo/: COMPLIANCE.md  pack.py  schemas.py
domain_packs/hr/: __init__.py
domain_packs/hr/hr_policy_qa/: COMPLIANCE.md  __init__.py  pack.py  schemas.py
domain_packs/hr/job_description_writer/: COMPLIANCE.md  __init__.py  pack.py  schemas.py
domain_packs/hr/talent_screening/: COMPLIANCE.md  __init__.py  pack.py  schemas.py
domain_packs/legal/: __init__.py
domain_packs/legal/contract_reviewer/: COMPLIANCE.md  __init__.py  pack.py  schemas.py
domain_packs/meeting_prep/: pack.py
domain_packs/productivity/: __init__.py
domain_packs/productivity/executive_brief/: __init__.py  pack.py  schemas.py
domain_packs/productivity/meeting_prep/: __init__.py  pack.py  schemas.py
domain_packs/productivity/rfp_assistant/: __init__.py  pack.py  schemas.py
domain_packs/productivity/summariser/: __init__.py  pack.py  schemas.py
domain_packs/productivity/support_triage/: __init__.py  pack.py  schemas.py
domain_packs/research/: __init__.py
domain_packs/research/analysis_only/: __init__.py  pack.py  schemas.py
domain_packs/research/research_analysis/: __init__.py  pack.py  schemas.py
domain_packs/research/research_only/: __init__.py  pack.py  schemas.py
domain_packs/research_analysis/: __init__.py  pack.py
domain_packs/research_only/: __init__.py  pack.py
domain_packs/rfp_assistant/: pack.py
domain_packs/rh/hr_policy_qa/: pack.py  schemas.py
domain_packs/rh/job_description_writer/: pack.py  schemas.py
domain_packs/rh/talent_screening/: pack.py  schemas.py
domain_packs/summariser/: pack.py
domain_packs/support_triage/: pack.py
evals/: __init__.py  __main__.py  checks.py  judge.py  models.py  runner.py
evals/datasets/: research_analysis.yaml  summariser.yaml  talent_screening.yaml
examples/custom_pack/: README.md  __init__.py  pack.py  schemas.py
examples/human_in_loop/: graph.py
examples/parallel/: graph.py
infra/: Dockerfile  docker-compose.yml
infra/helm/langgraph-agent-stack/: Chart.yaml  values.prod.yaml  values.yaml
infra/helm/langgraph-agent-stack/examples/: prometheus-adapter-rule.yaml
infra/helm/langgraph-agent-stack/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  keda-scaledobject.yaml  pdb.yaml  secret.yaml
infra/terraform/: main.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/aks/: backend.tf.example  main.tf  variables.tf
infra/terraform/eks/: backend.tf.example  main.tf  variables.tf
infra/terraform/gke/: backend.tf.example  cluster.tf  main.tf  variables.tf
infra/terraform/modules/aks/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/gke/: main.tf  secrets.tf  variables.tf
pack_kernel/: __init__.py  base_pack.py  builtin_packs.py  plugins.py  registry.py
platform/: __init__.py  base_pack.py  registry.py
scripts/: infra-devsecops.sh  readme-smoke.sh
tests/: conftest.py  legacy_pack_override.py  test_agents.py  test_analysis_only_pack.py  test_api.py  test_api_async.py  test_api_connector.py  test_api_pack_body_validation.py  test_auth_error_propagation.py  test_compliance.py  test_config.py  test_connector_pack.py  test_control_plane.py  test_core_connectors.py  test_cost.py  test_custom_pack_example.py  test_enterprise_connectors.py  test_evals.py  test_graph.py  test_http_connector.py  test_integration_backends.py  test_integration_real.py  test_llm.py  test_llm_retry.py  test_memory.py  test_memory_sticky_redis.py  test_metrics.py  test_middleware.py  test_mock_provider_e2e.py  test_multi_tenant_auth.py  test_observability.py  test_output_guard.py  test_pack_contracts.py  test_pack_error_paths.py  test_pack_plugins.py  test_pack_versioning.py  test_prompt_safety.py  test_regulated_packs_validation.py  test_request_body_limit.py  test_research_only_pack.py  (+11 more)
