[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-agent-stack"
version = "0.5.0"
description = "Production-ready multi-agent orchestration stack using LangGraph and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
# LLM providers — install the one(s) you need
anthropic = ["langchain-anthropic>=0.3"]
openai    = ["langchain-openai>=0.2"]
google    = ["langchain-google-genai>=2.0"]
bedrock   = ["langchain-aws>=0.2"]
ollama    = ["langchain-ollama>=0.2"]
all-providers = [
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-aws>=0.2",
    "langchain-ollama>=0.2",
]
# Infrastructure
redis = [
    "redis>=5",
    "langgraph-checkpoint-redis>=0.0.6",
]
postgres = [
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "langgraph-checkpoint-postgres>=2.0",
]
rag = [
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-exporter-otlp>=1.20",
    "python-json-logger>=2.0",
    "prometheus-client>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "core", "api", "connectors", "control_plane"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-env>=1.1",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=24",
    "pyright>=1.1",
    "testcontainers>=4.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring Docker (deselect with '-m \"not integration\"')",
]
env = [
    "LLM_PROVIDER=anthropic",
    "ANTHROPIC_API_KEY=sk-ant-test123456789012345",
    "MEMORY_BACKEND=sqlite",
    "ENVIRONMENT=development",
    "LOG_LEVEL=WARNING",
]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["agents", "core", "api"]
exclude = ["tests", ".venv"]
reportMissingImports = "warning"
reportTypedDictNotRequiredAccess = false

[tool.coverage.run]
source = ["api", "core", "agents"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
