[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-agent-stack"
version = "0.6.1"
description = "Deployable multi-agent orchestration stack (LangGraph + FastAPI) with production infra baseline; add your own identity layer for multi-tenant SaaS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.1,<2.0",
    "langchain>=0.3,<2.0",
    "langchain-community>=0.4.2,<1.0",
    "langchain-core>=1.3.3,<2.0",
    "langchain-classic>=1.0.8,<2.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "httpx>=0.27",
    "tenacity>=9.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "langgraph-checkpoint-sqlite>=3.1.0,<4.0",
]

[project.optional-dependencies]
# LLM providers — install the one(s) you need
anthropic = ["langchain-anthropic>=1.4.8,<2.0", "anthropic>=0.87.0"]
openai    = ["langchain-openai>=1.3.3,<2.0"]
google    = ["langchain-google-genai>=4.2.7,<5.0"]
bedrock   = ["langchain-aws>=1.6.2,<2.0"]
ollama    = ["langchain-ollama>=1.1.0,<2.0"]
all-providers = [
    "langchain-anthropic>=1.4.8,<2.0",
    "anthropic>=0.87.0",
    "langchain-openai>=1.3.3,<2.0",
    "langchain-google-genai>=4.2.7,<5.0",
    "langchain-aws>=1.6.2,<2.0",
    "langchain-ollama>=1.1.0,<2.0",
]
# Infrastructure
redis = [
    "redis>=5",
    "langgraph-checkpoint-redis>=0.5.0,<1.0",
]
postgres = [
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "langgraph-checkpoint-postgres>=3.1.0,<4.0",
]
rag = [
    "langchain-chroma>=0.1,<2.0",
    "chromadb>=0.5",
]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-exporter-otlp>=1.20",
    "python-json-logger>=2.0",
    "prometheus-client>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "core",
    "api",
    "connectors",
    "control_plane",
    "pack_kernel",
    "domain_packs",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-env>=1.1",
    "httpx>=0.27",
    "ruff>=0.8",
    "pyright>=1.1",
    "testcontainers>=4.0",
    "bandit[sarif]>=1.8",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring Docker (deselect with '-m \"not integration\"')",
]
env = [
    "LLM_PROVIDER=anthropic",
    "ANTHROPIC_API_KEY=sk-ant-test123456789012345",
    "MEMORY_BACKEND=sqlite",
    "ENVIRONMENT=development",
    "LOG_LEVEL=WARNING",
]

[tool.pyright]
# Upgraded from "basic": standard is the production baseline for this template.
# Strict is scoped to pack_kernel (platform contract); agents/core/api stay on
# standard until LangGraph/Prometheus stubs and dynamic pack dispatch are typed.
typeCheckingMode = "standard"
pythonVersion = "3.12"
include = [
    "agents",
    "core",
    "api",
    "pack_kernel",
    "domain_packs",
    "control_plane",
    "connectors",
]
exclude = ["tests", ".venv"]
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportTypedDictNotRequiredAccess = false
strict = ["pack_kernel"]

[tool.coverage.run]
source = [
    "api",
    "core",
    "agents",
    "pack_kernel",
    "domain_packs",
    "connectors",
    "control_plane",
]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
